# dear-imgui-godot

./: .gitattributes  .gitignore  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: build.yml
addons/dear-imgui-godot/: dear-imgui-godot.gdextension  dear-imgui-godot.gdextension.uid  godot-imgui-rust.csproj  imgui_api.gd  plugin.cfg  plugin.gd
addons/dear-imgui-godot/demo/: demo.gd  demo.gd.uid
addons/dear-imgui-godot/demo/csharp/: DemoCs.cs  demo_cs.tscn
addons/dear-imgui-godot/dotnet/: ImGui.Buttons.cs  ImGui.Color.cs  ImGui.DragDrop.cs  ImGui.Draw.cs  ImGui.Images.cs  ImGui.Inputs.cs  ImGui.Layout.cs  ImGui.Lists.cs  ImGui.Misc.cs  ImGui.Plots.cs  ImGui.Popups.cs  ImGui.Sliders.cs  ImGui.State.cs  ImGui.Status.cs  ImGui.Tables.cs  ImGui.Tabs.cs  ImGui.Text.cs  ImGui.Trees.cs  ImGui.Windows.cs  ImGui.cs
addons/godot-imgui-rust/: godot-imgui-rust.gdextension  imgui_api.tscn  plugin.cfg  plugin.gd.uid
addons/godot-imgui-rust/assets/: icon.svg.import
addons/godot-imgui-rust/demo/: demo.gd  demo.tscn
imgui/: Cargo.toml  Makefile  build.rs
imgui/.cargo/: config.toml
imgui/src/: api.rs  backend.rs  example.rs  fonts.rs  imgui_recover.c  input.rs  lib.rs  renderer.rs
imgui/src/api/: buttons.rs  color.rs  dragdrop.rs  draw.rs  guard.rs  images.rs  inputs.rs  layout.rs  lists.rs  misc.rs  plots.rs  popups.rs  sliders.rs  state.rs  status.rs  tables.rs  tabs.rs  text.rs  trees.rs  windows.rs
