[package]
name = "godot_imgui_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.5.3", git = "https://github.com/godot-rust/gdext", branch = "master", features = [
    "api-custom",
    "experimental-wasm",
    "lazy-function-tables",
] }
imgui = { version = "0.12", default-features = false, features = ["docking", "tables-api"] }

[features]
nothreads = ["godot/experimental-wasm-nothreads"]
# Editor-only: embeds Rust doc comments into Godot's in-editor help. Enabled for
# the debug build the editor loads, left out of release/web exports.
editor-docs = ["godot/register-docs"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
